--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "axios": "^0.21",
+        "axios": "^0.21.1",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
@@ -21,6 +21,7 @@
         "vue": "^2.6.12",
         "vue-axios": "^3.2.2",
         "vue-bootstrap4-table": "^1.1.11",
-        "vue-router": "^3.4.9"
+        "vue-router": "^3.4.9",
+        "vuex": "^3.6.0"
     }
 }
